# tailscale-esp32

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: optimization.md  protocol-support.md
examples/: README.md  icmp-status-light.rs  tailnet-gpio.rs  tailnet-sensor.rs
examples/wake-on-lan/: .env.example  Cargo.toml  README.md  sdkconfig.defaults
examples/wake-on-lan/.cargo/: config.toml
examples/wake-on-lan/scripts/: enable-wowlan.sh  flash.sh  wake-tailscale.sh  wake.sh
examples/wake-on-lan/src/: dashboard.html  lib.rs  main.rs
src/: client.rs  control.rs  derp.rs  disco.rs  h2.rs  identity.rs  key.rs  lib.rs  netmap.rs  noise.rs  paths.rs  resolver.rs  runtime.rs  stun.rs  tailnet_lock.rs  wireguard.rs
tests/: derp_live.rs
