[package]
name = "tailscale-esp32"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["0xdilo"]
description = "Native Rust building blocks for running a constrained Tailscale node on ESP32"
license = "MIT"
repository = "https://github.com/0xdilo/tailscale-esp32"
homepage = "https://github.com/0xdilo/tailscale-esp32"
documentation = "https://docs.rs/tailscale-esp32"
readme = "README.md"
keywords = ["tailscale", "esp32", "wireguard", "embedded", "vpn"]
categories = ["embedded", "network-programming", "cryptography"]
exclude = ["examples/wake-on-lan/.env"]

[dependencies]
base64 = "0.22"
blake2 = "0.10"
chacha20poly1305 = "0.10"
crypto_box = { version = "0.9", features = ["std"] }
ed25519-dalek = "2"
getrandom = "0.2"
httlib-hpack = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = { version = "0.9.6", features = ["risky-raw-split"] }
thiserror = "2"
x25519-dalek = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
serde_json = "1"
